chore: base commit

--- a/renovate.json
+++ b/renovate.json
@@ -5,7 +5,7 @@
     ":semanticCommits"
   ],
   "assignees": [
-    "gciatto"
+    "sesdun"
   ],
   "automerge": true,
   "dependencyDashboard": true,
